6.3. Fixed tests